Backport Set/List.of() calls to their Java 8 equivalents